# svut

./: .gitignore  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  Makefile  Makefile.example  README.md  pypi.md  pyproject.toml  setup.py  sim_main.cpp  svut.core  svutCreate  svutCreate.py  svutRun  svutRun.py  svut_h.sv  svut_h.v  template.sv
.github/workflows/: ci.yaml  ci_macos.yaml  ci_ubuntu.yaml
example/: ffd.sv  ffd.v  ffd_tb.sv  ffd_testbench.sv  ffd_unit_test.sv
svut/: svutCreate.py  svutRun.py  svut_h.sv  template.cpp  template.sv
test/: Adder.v  Adder_KO_testsuite.sv  Adder_OK_testsuite.sv  Makefile  adder.v  adder_unit_test.sv  empty_unit_test.sv  lint.sh  regression.sh  svut_h.sv  testsuite_create.sh  testsuite_examples.sh  testsuite_run.sh  testsuite_run_args.sh  timeout_unit_test.sv
