[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "svut"
version = "1.6.1"
authors = [
  { name="Damien Pretet", email="damien.pretet@me.com" },
]
description = "SystemVerilog Unit Test (SVUT)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dpretet/svut"
"Bug Tracker" = "https://github.com/dpretet/svut/issues"
